--- a/css/insightsSlider.css
+++ b/css/insightsSlider.css
@@ -56,6 +56,7 @@
   .insights-content {
     width: 100%; }
     .insights-content .item-wrapper {
+      list-style: none;
       padding: 0px; }
   .item {
     height: 500px;
@@ -110,6 +111,7 @@
     align-content: start;
     padding: var(--gutter) 0; }
     .insights-content .item-wrapper {
+      list-style: none;
       display: grid;
       grid-gap: calc(var(--gutter) / 2);
       grid-template-columns: repeat(9, calc(50% - var(--gutter) * 2));
@@ -129,20 +131,21 @@
   .item {
     margin: 0;
     padding: 0;
-    height: 500px;
-    display: relative; }
+    height: 500px; }
     .item .person {
+      display: flex;
       width: 640px;
       height: 400px; }
     .item .journal {
-      position: absolute;
+      display: flex;
       width: 410PX;
       height: 495PX;
       background-size: 100% auto;
       background-repeat: no-repeat;
       object-fit: cover; }
     .item .photograph {
-      display: absolute;
+      display: flex;
+      position: absolute;
       width: 100%;
       height: 100%;
       background-size: 100% auto;
@@ -155,17 +158,16 @@
       height: 100px;
       background-size: 100% auto;
       background-repeat: no-repeat;
-      object-fit: cover; } }
-
-.sticky-note {
-  position: absolute;
-  top: 100px;
-  right: 50px;
-  height: 100px;
-  width: 100px;
-  background-size: 100% auto;
-  background-repeat: no-repeat;
-  object-fit: cover; }
+      object-fit: cover; }
+  .sticky-note {
+    position: absolute;
+    top: 100px;
+    right: 50px;
+    height: 100px;
+    width: 100px;
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+    object-fit: cover; } }
 
 .sticky-note.ux-designer {
   background-image: url("../assets/UX.png"); }
