--- a/css/insightsSlider.css
+++ b/css/insightsSlider.css
@@ -76,6 +76,7 @@
       top: 0;
       right: 0; }
     .item .photograph {
+      position: absolute;
       background-image: url("../assets/Images/Shoes/1.png");
       width: 100%;
       height: 495px;
@@ -127,22 +128,23 @@
         justify-content: center;
         align-items: center; }
   .item {
+    display: flex;
     margin: 0;
     padding: 0;
-    height: 500px;
-    display: relative; }
+    height: 500px; }
     .item .person {
       width: 640px;
-      height: 400px; }
+      height: 400px;
+      display: flex; }
     .item .journal {
-      position: absolute;
       width: 410PX;
       height: 495PX;
       background-size: 100% auto;
       background-repeat: no-repeat;
-      object-fit: cover; }
+      object-fit: cover;
+      top: 0;
+      right: 0; }
     .item .photograph {
-      display: absolute;
       width: 100%;
       height: 100%;
       background-size: 100% auto;
