--- a/css/insights.css
+++ b/css/insights.css
@@ -30,7 +30,8 @@ body {
       body .insights-titles {
         max-width: max-content;
         margin-left: 10%;
-        margin-top: 100px; } }
+        margin-top: 100px;
+        position: relative; } }
     body .insights-titles ul .nav-link {
       color: white; }
       @media only screen and (max-width: 768px) {
