--- a/css/insightsSlider.css
+++ b/css/insightsSlider.css
@@ -43,6 +43,7 @@
   .insights-content > .full {
     grid-column: 1 / -1; }
   .insights-content {
+    display: none;
     overflow: hidden;
     position: -webkit-sticky;
     /* Safari */
