--- a/css/insightsSlider.css
+++ b/css/insightsSlider.css
@@ -6,26 +6,29 @@
       padding: 0px; }
   .item {
     height: 500px;
-    position: relative;
-    margin-bottom: 100px; }
+    position: relative; }
     .item .person {
       display: flex;
       width: 640px;
       height: 400px; }
     .item .journal-wrapper {
-      display: flex;
-      height: 495PX;
-      background-size: 100% auto;
-      background-repeat: no-repeat;
-      object-fit: cover;
       position: absolute;
-      top: 0;
-      right: 0; }
+      max-width: 100vw; }
+      .item .journal-wrapper .journal {
+        max-width: 100%;
+        background-size: 100% auto;
+        background-repeat: no-repeat;
+        object-fit: cover;
+        top: 0;
+        right: 0; }
     .item .photograph-wrapper {
-      height: 495px;
-      background-size: 100% auto;
-      background-repeat: no-repeat;
+      max-width: 100vw;
       position: absolute; }
+      .item .photograph-wrapper .photograph {
+        margin-top: 240px;
+        background-size: 100% auto;
+        background-repeat: no-repeat;
+        max-width: 100%; }
   .holder div {
     z-index: 0;
     /*init z-index*/ }
