--- a/css/insightsSlider.css
+++ b/css/insightsSlider.css
@@ -1,6 +1,11 @@
 @media only screen and (max-width: 768px) {
   #rotateBtn {
     text-align: right;
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    outline: inherit;
     width: 100%;
     font-size: 30px;
     padding-right: 20px;
@@ -9,9 +14,10 @@
     width: 100%; }
     .insights-content .item-wrapper {
       list-style-type: none;
-      padding: 0px; }
+      padding: 10px; }
   .item {
-    height: 500px;
+    height: 250px;
+    margin-bottom: 10px;
     position: relative; }
     .item .person {
       display: flex;
@@ -23,25 +29,26 @@
       .item .journal-wrapper .journal {
         width: 100%;
         max-width: 100%;
-        background-size: 100% auto;
-        background-repeat: no-repeat;
+        max-height: 230px;
+        height: 300PX;
         object-fit: cover;
+        bottom: 0;
         top: 0;
         right: 0; }
     .item .photograph-wrapper {
       max-width: 100vw;
       position: absolute; }
       .item .photograph-wrapper .photograph {
-        margin-top: 240px;
         background-size: 100% auto;
         background-repeat: no-repeat;
-        max-width: 100%; }
+        max-width: 100%;
+        bottom: 0; }
   .holder div {
     z-index: 0;
     /*init z-index*/ }
   .holder div.current {
-    z-index: 1; }
-  /*only this DIV will be visible*/ }
+    z-index: 1;
+    /*only this DIV will be visible*/ } }
 
 @media only screen and (min-width: 768px) {
   #rotateBtn {
