--- a/scss/insightsSlider.scss
+++ b/scss/insightsSlider.scss
@@ -4,22 +4,28 @@ $width: 768px;
 @media only screen and (max-width: $width) {
 	#rotateBtn{
 		text-align: right;
-    width: 100%;
-    font-size: 30px;
-    padding-right: 20px;
-    padding-top: 20px;
+		background: none;
+		color: inherit;
+		border: none;
+		padding: 0;
+		outline: inherit;
+		width: 100%;
+		font-size: 30px;
+		padding-right: 20px;
+		padding-top: 20px;
 	}
 	.insights-content {
 		width: 100%;
 
 		.item-wrapper {
 			list-style-type: none;
-			padding: 0px;
+			padding: 10px;
+
 		}
 	}
-
 	.item {
-		height: 500px;
+		height: 250px;
+		margin-bottom: 10px;
 		position: relative;
 
 		.person {
@@ -27,54 +33,38 @@ $width: 768px;
 			width: 640px;
 			height: 400px;
 		}
-
 		.journal-wrapper {
+			position: absolute;
+			max-width: 100vw;
 			.journal{
 				width: 100%;
 				max-width: 100%;
-
-				// height: 495PX;
-				background-size: 100% auto;
-				background-repeat: no-repeat;
+				max-height: 230px;
+				height: 300PX;
 				object-fit: cover;
-
+				bottom: 0;
 				top: 0;
 				right: 0;
-				// display: flex;
 			}
-			position: absolute;
-			max-width: 100vw;
-
-
-
-
 		}
-
 		.photograph-wrapper {
+			max-width: 100vw;
+			position: absolute;
 			.photograph{
-				margin-top: 240px;
+				// margin-top: 240px;
 				background-size: 100% auto;
 				background-repeat: no-repeat;
 				max-width: 100%;
-
+				bottom: 0;
 			}
-			max-width: 100vw;
-			position: absolute;
-
 		}
 	}
-
 	.holder div {
-		z-index: 0;
-		/*init z-index*/
+		z-index: 0;	/*init z-index*/
 	}
-
 	.holder div.current {
-		z-index: 1;
+		z-index: 1;/*only this DIV will be visible*/
 	}
-
-	/*only this DIV will be visible*/
-
 }
 
 
