--- a/css/insightsSlider.css
+++ b/css/insightsSlider.css
@@ -25,16 +25,10 @@
       height: 400px; }
     .item .journal-wrapper {
       position: absolute;
-      max-width: 100vw; }
+      padding-bottom: 50px; }
       .item .journal-wrapper .journal {
-        width: 100%;
-        max-width: 100%;
-        max-height: 230px;
-        height: 300PX;
-        object-fit: cover;
-        bottom: 0;
-        top: 0;
-        right: 0; }
+        max-height: 330px;
+        object-fit: cover; }
     .item .photograph-wrapper {
       max-width: 100vw;
       position: absolute; }
