--- a/scss/insightsSlider.scss
+++ b/scss/insightsSlider.scss
@@ -36,16 +36,17 @@ $width: 768px;
 		}
 		.journal-wrapper {
 			position: absolute;
-			max-width: 100vw;
+			// max-width: 100vw;
+			padding-bottom: 50px;
 			.journal{
-				width: 100%;
-				max-width: 100%;
-				max-height: 230px;
-				height: 300PX;
+				// background-color: pink;
+				// outline: 1px red solid;
+				// width: 100%;
+				// max-width: 100%;
+				max-height: 330px;
+				// height: 300PX;
 				object-fit: cover;
-				bottom: 0;
-				top: 0;
-				right: 0;
+
 			}
 		}
 		.photograph-wrapper {
