--- a/css/insightsSlider.css
+++ b/css/insightsSlider.css
@@ -18,20 +18,23 @@
   .item {
     height: 250px;
     margin-bottom: 10px;
-    position: relative; }
+    position: relative;
+    margin-bottom: 300px; }
     .item .person {
       display: flex;
       width: 640px;
       height: 400px; }
     .item .journal-wrapper {
-      position: absolute;
-      padding-bottom: 50px; }
+      position: absolute; }
       .item .journal-wrapper .journal {
-        max-height: 330px;
-        object-fit: cover; }
+        max-width: 90%;
+        margin-left: 5%;
+        object-fit: cover;
+        padding-bottom: 100px; }
     .item .photograph-wrapper {
       max-width: 100vw;
-      position: absolute; }
+      position: absolute;
+      margin-top: 210px; }
       .item .photograph-wrapper .photograph {
         background-size: 100% auto;
         background-repeat: no-repeat;
