--- a/scss/insightsSlider.scss
+++ b/scss/insightsSlider.scss
@@ -28,6 +28,7 @@ $width: 768px;
 		height: 250px;
 		margin-bottom: 10px;
 		position: relative;
+		margin-bottom: 300px;
 
 		.person {
 			display: flex;
@@ -37,21 +38,25 @@ $width: 768px;
 		.journal-wrapper {
 			position: absolute;
 			// max-width: 100vw;
-			padding-bottom: 50px;
+
 			.journal{
 				// background-color: pink;
 				// outline: 1px red solid;
 				// width: 100%;
-				// max-width: 100%;
-				max-height: 330px;
+				max-width: 90%;
+				margin-left: 5%;
+				// max-height: 330px;
 				// height: 300PX;
 				object-fit: cover;
+				padding-bottom: 100px;
+
 
 			}
 		}
 		.photograph-wrapper {
 			max-width: 100vw;
 			position: absolute;
+			margin-top: 210px;
 			.photograph{
 				// margin-top: 240px;
 				background-size: 100% auto;
