--- a/scss/insightsSlider.scss
+++ b/scss/insightsSlider.scss
@@ -45,6 +45,7 @@ $width: 768px;
 				// width: 100%;
 				max-width: 90%;
 				margin-left: 5%;
+				max-height: 330px;
 				// max-height: 330px;
 				// height: 300PX;
 				object-fit: cover;
