--- a/scss/rules.scss
+++ b/scss/rules.scss
@@ -81,6 +81,25 @@ body {
 				}
 			}
 
+			.guidelines-list {
+				padding: 0;
+
+				>li {
+					padding: 0;
+				}
+
+				.guideline-photo {
+					width: 360px;
+					margin-top: 50px;
+					margin-left: 30px;
+					transition: all .2s ease-in-out;
+
+					&:hover {
+						width: 450px;
+					}
+				}
+			}
+
 			.number {
 				opacity: 0.3;
 				padding-right: 7px;
@@ -126,6 +145,8 @@ body {
 				}
 			}
 
+
+
 			@media only screen and (min-width: 768px) {
 
 				li {
@@ -145,6 +166,8 @@ body {
 				}
 			}
 		}
+
+
 
 		.rotate {
 			-moz-transition: all .2s linear;
