--- a/css/insightsSlider.css
+++ b/css/insightsSlider.css
@@ -114,7 +114,11 @@
       object-fit: cover;
       background-size: 100% auto;
       background-repeat: no-repeat;
-      z-index: 2; }
+      z-index: 2;
+      transition: all .2s ease-in-out; }
+      .item .photograph:hover {
+        width: 330px;
+        height: 210px; }
   .sticky-note {
     position: absolute;
     top: 100px;
