--- a/scss/insights.scss
+++ b/scss/insights.scss
@@ -49,6 +49,7 @@ body {
 		ul {
 			.nav-link {
 				color: white;
+				padding: 5px;
 
 				@media only screen and (max-width: 768px) {
 					border: 2px solid white;
