--- a/scss/insightsSlider.scss
+++ b/scss/insightsSlider.scss
@@ -123,7 +123,7 @@ $width: 768px;
 			display: grid;
 			grid-gap: calc(var(--gutter) / 2);
 			grid-template-columns: repeat(9, calc(35% - var(--gutter) * 2));
-			grid-template-rows: minmax(400px, 1fr);
+			grid-auto-rows: minmax(440px, 1fr);
 			overflow-x: scroll;
 			overflow-y: hidden;
 			scroll-snap-type: x proximity;
@@ -138,6 +138,7 @@ $width: 768px;
 	.item {
 		margin: 0;
 		padding: 0;
+		top: 40px;
 		position: relative;
 		scroll-snap-align: center;
 		display: flex;
@@ -157,8 +158,7 @@ $width: 768px;
 			.journal {
 				display: flex;
 				position: absolute;
-				width: 310PX;
-				height: 495PX;
+				width: 270PX;
 				background-size: 100% auto;
 				background-repeat: no-repeat;
 				object-fit: cover;
@@ -180,7 +180,6 @@ $width: 768px;
 			display: flex;
 			position: absolute;
 			bottom: 55px;
-			bottom: 0;
 			width: 300px;
 			height: 200px;
 			object-fit: cover;
@@ -247,18 +246,18 @@ li.service-designer {
 
 	//what happens when sticky note is clicked to each item
 	.service-designer {
-		margin-top: -101px;
+		top: 0px;
 	}
 }
 
 .item-wrapper.ux-designer {
 	.ux-designer {
-		margin-top: -101px;
+		top: 0px;
 	}
 }
 
 .item-wrapper.typographer {
 	.typographer {
-		margin-top: -101px;
+		top: 0px;
 	}
 }
