--- a/scss/insightsSlider.scss
+++ b/scss/insightsSlider.scss
@@ -24,6 +24,7 @@ $width: 768px;
 
 		}
 	}
+
 	.item {
 		height: 250px;
 		margin-bottom: 10px;
@@ -35,11 +36,12 @@ $width: 768px;
 			width: 640px;
 			height: 400px;
 		}
+
 		.journal-wrapper {
 			position: absolute;
 			// max-width: 100vw;
 
-			.journal{
+			.journal {
 				// background-color: pink;
 				// outline: 1px red solid;
 				// width: 100%;
@@ -54,11 +56,13 @@ $width: 768px;
 
 			}
 		}
+
 		.photograph-wrapper {
 			max-width: 100vw;
 			position: absolute;
 			margin-top: 210px;
-			.photograph{
+
+			.photograph {
 				// margin-top: 240px;
 				background-size: 100% auto;
 				background-repeat: no-repeat;
@@ -67,11 +71,15 @@ $width: 768px;
 			}
 		}
 	}
+
 	.holder div {
-		z-index: 0;	/*init z-index*/
+		z-index: 0;
+		/*init z-index*/
 	}
+
 	.holder div.current {
-		z-index: 1;/*only this DIV will be visible*/
+		z-index: 1;
+		/*only this DIV will be visible*/
 	}
 }
 
@@ -116,7 +124,7 @@ $width: 768px;
 			display: grid;
 			grid-gap: calc(var(--gutter) / 2);
 			grid-template-columns: repeat(9, calc(35% - var(--gutter) * 2));
-			grid-template-rows: minmax(400px, 1fr);
+			grid-auto-rows: minmax(440px, 1fr);
 			overflow-x: scroll;
 			overflow-y: hidden;
 			scroll-snap-type: x proximity;
@@ -131,6 +139,7 @@ $width: 768px;
 	.item {
 		margin: 0;
 		padding: 0;
+		top: 40px;
 		position: relative;
 		scroll-snap-align: center;
 		display: flex;
@@ -150,8 +159,7 @@ $width: 768px;
 			.journal {
 				display: flex;
 				position: absolute;
-				width: 310PX;
-				height: 495PX;
+				width: 270PX;
 				background-size: 100% auto;
 				background-repeat: no-repeat;
 				object-fit: cover;
@@ -173,7 +181,6 @@ $width: 768px;
 			display: flex;
 			position: absolute;
 			bottom: 55px;
-			bottom: 0;
 			width: 300px;
 			height: 200px;
 			object-fit: cover;
@@ -240,18 +247,18 @@ li.service-designer {
 
 	//what happens when sticky note is clicked to each item
 	.service-designer {
-		margin-top: -101px;
+		top: 0px;
 	}
 }
 
 .item-wrapper.ux-designer {
 	.ux-designer {
-		margin-top: -101px;
+		top: 0px;
 	}
 }
 
 .item-wrapper.typographer {
 	.typographer {
-		margin-top: -101px;
+		top: 0px;
 	}
 }
