--- a/scss/insightsSlider.scss
+++ b/scss/insightsSlider.scss
@@ -151,7 +151,7 @@ $width: 768px;
 			display: flex;
 		}
 
-		.info {
+		.journal-wrapper {
 			position: relative;
 			z-index: 1;
 
@@ -163,38 +163,47 @@ $width: 768px;
 				background-repeat: no-repeat;
 				object-fit: cover;
 			}
-
-			.tag {
-				display: flex;
-				position: absolute;
-				float: right;
-				width: 100px;
-				height: 100px;
-				background-size: 100% auto;
-				background-repeat: no-repeat;
-				object-fit: cover;
-			}
 		}
 
-		.photograph {
+		.tag {
+			cursor: pointer;
+			z-index: 2;
+			top: 130px;
+			right: 50px;
 			display: flex;
 			position: absolute;
-			bottom: 55px;
-			width: 300px;
-			height: 200px;
-			object-fit: cover;
+			width: 100px;
+			height: 100px;
 			background-size: 100% auto;
 			background-repeat: no-repeat;
-			z-index: 2;
-			transition: all .2s ease-in-out;
+			object-fit: cover;
+		}
 
-			&:hover {
-				//transform: scale(1.2);
-				width: 330px;
-				height: 210px;
+
+		.photograph-wrapper {
+			width: content;
+
+			.photograph {
+				display: flex;
+				position: absolute;
+				bottom: 55px;
+				width: 300px;
+				height: 200px;
+				object-fit: cover;
+				background-size: 100% auto;
+				background-repeat: no-repeat;
+				z-index: 2;
+				transition: all .2s ease-in-out;
+
+				&:hover {
+					//transform: scale(1.2);
+					width: 330px;
+					height: 210px;
+				}
 			}
 		}
 	}
+
 
 	.sticky-note {
 		position: absolute;
@@ -239,6 +248,12 @@ li.typographer {
 li.service-designer {
 	.tag {
 		background-image: url('../assets/SERV.png');
+	}
+}
+
+li.creative {
+	.tag {
+		background-image: url('../assets/creat.png');
 	}
 }
 
