--- a/scss/insightsSlider.scss
+++ b/scss/insightsSlider.scss
@@ -174,6 +174,10 @@ $width: 768px;
 				background-size: 100% auto;
 				background-repeat: no-repeat;
 				object-fit: cover;
+				transition: transform 0.5s;
+			}
+			.tag:hover {
+			  transform: rotate(20deg);
 			}
 		}
 
