--- a/css/insightsSlider.css
+++ b/css/insightsSlider.css
@@ -61,12 +61,12 @@
   .insights-content > .full {
     grid-column: 1 / -1; }
   .insights-content {
-    display: grid;
     display: none;
     overflow: hidden;
     position: absolute;
     bottom: 0;
     width: 100vw;
+    display: grid;
     grid-gap: var(--gutter) 0;
     grid-template-columns: var(--gutter) 1fr var(--gutter);
     align-content: start; }
@@ -80,8 +80,7 @@
       overflow-y: hidden;
       scroll-snap-type: x proximity;
       padding-bottom: calc(.75 * var(--gutter));
-      margin-bottom: calc(-.25 * var(--gutter));
-      scroll-padding-left: 100px; }
+      margin-bottom: calc(-.25 * var(--gutter)); }
   .item {
     margin: 0;
     padding: 0;
@@ -110,6 +109,7 @@
       z-index: 2;
       top: 130px;
       right: 50px;
+      float: right;
       display: flex;
       position: absolute;
       width: 100px;
@@ -137,6 +137,8 @@
         .item .photograph-wrapper .photograph:hover {
           width: 330px;
           height: 210px; }
+  .nopointer {
+    pointer-events: none; }
   .sticky-note {
     position: absolute;
     top: 100px;
