--- a/scss/insightsSlider.scss
+++ b/scss/insightsSlider.scss
@@ -109,12 +109,12 @@ $width: 768px;
 	}
 
 	.insights-content {
-		display: grid;
 		display: none;
 		overflow: hidden;
 		position: absolute;
 		bottom: 0;
 		width: 100vw;
+		display: grid;
 		grid-gap: var(--gutter) 0;
 		grid-template-columns: var(--gutter) 1fr var(--gutter);
 		align-content: start;
@@ -130,7 +130,8 @@ $width: 768px;
 			scroll-snap-type: x proximity;
 			padding-bottom: calc(.75 * var(--gutter));
 			margin-bottom: calc(-.25 * var(--gutter));
-			scroll-padding-left: 100px;
+
+
 
 
 		}
@@ -145,6 +146,8 @@ $width: 768px;
 		display: flex;
 		flex-direction: column;
 		align-items: baseline;
+		// margin-left: 50vw;
+
 
 		.person {
 			width: 640px;
@@ -171,6 +174,7 @@ $width: 768px;
 			z-index: 2;
 			top: 130px;
 			right: 50px;
+			float: right;
 			display: flex;
 			position: absolute;
 			width: 100px;
@@ -209,6 +213,11 @@ $width: 768px;
 				}
 			}
 		}
+	}
+
+	.nopointer{
+		pointer-events: none;
+		// opacity: 0;
 	}
 
 
